<resources>
    <string name="alpine_button_loading">Loading</string>
    <string name="alpine_input_invalid">Invalid input</string>
    <string name="alpine_password_show">Show password</string>
    <string name="alpine_password_hide">Hide password</string>
    <string name="alpine_toggle_on">On</string>
    <string name="alpine_toggle_off">Off</string>
    <string name="alpine_theme_dark_mode">Dark mode</string>
    <string name="alpine_theme_light_mode">Light mode</string>
    <string name="alpine_dialog_close">Close dialog</string>
    <string name="alpine_dropdown_placeholder">Select</string>
    <string name="alpine_dropdown_empty">No options available</string>
</resources>
